Fix ranking freshness and digest story alignment

--- a/components/leaderboard-command-center.module.css
+++ b/components/leaderboard-command-center.module.css
@@ -894,10 +894,6 @@
     grid-template-columns: 1fr;
   }
 
-  .podiumGrid .podiumCard:nth-child(2) {
-    order: -1;
-  }
-
   .tableHead {
     display: none;
   }
